--- a/src/index.html
+++ b/src/index.html
@@ -93,9 +93,9 @@
 					<button data-img="./img/rotate-boot4.png" data-advantage="advantage__4" class="rotation__btn rotation__btn-4"></button>
 					<button data-img="./img/rotate-boot5.png" data-advantage="advantage__5" class="rotation__btn rotation__btn-5"></button>
 					<img src="./img/rotate-boot1.png" alt="" class="rotation__boot rotation__boot-1 active">
-					<img src="./img/rotate-boot2.png" alt="" class="rotation__boot rotation__boot-2">
-					<img src="./img/rotate-boot3.png" alt="" class="rotation__boot rotation__boot-3">
-					<img src="./img/rotate-boot4.png" alt="" class="rotation__boot rotation__boot-4">
+					<img src="./img/rotate-boot2.png" alt="" class="rotation__boot rotation__boot-2 ">
+					<img src="./img/rotate-boot3.png" alt="" class="rotation__boot rotation__boot-3 ">
+					<img src="./img/rotate-boot4.png" alt="" class="rotation__boot rotation__boot-4 ">
 					<img src="./img/rotate-boot5.png" alt="" class="rotation__boot rotation__boot-5">
 					<a href="#card" class="order__link">
 						Заказать
@@ -104,38 +104,48 @@
 				<div class="galary">
 					<div class="galary__background"></div>
 					<img src="./img/galary-man.png" alt="" class="galary__man-img">
-					<div class="galary__wrapper">
-						<div class="main__foto">
-							<a data-fancybox="gallery" href="./img/galary/white-1.jpg">
-								<img src="./img/galary/white-1.jpg" data-white="./img/galary/white-1.jpg"
-									data-black="./img/galary/black-1.jpg" alt="" class="main__foto-img">
-							</a>
+					<div class="galary__block">
+						<div class="galary__wrapper">
+							<div class="main__foto foto1 galary__slide" id="main__foto">
+								<a data-fancybox="gallery" href="./img/galary/white-1.jpg">
+									<img src="./img/galary/white-1.jpg" data-white="./img/galary/white-1.jpg"
+										data-black="./img/galary/black-1.jpg" alt="" class="main__foto-img">
+								</a>
+							</div>
+							<div class="other__foto foto2 galary__slide">
+								<a data-fancybox="gallery" href="./img/galary/white-2.jpg">
+									<img src="./img/galary/white-2.jpg" data-white="./img/galary/white-2.jpg"
+										data-black="./img/galary/black-2.jpg" alt="" class="other__foto-img">
+								</a>
+							</div>
+							<div class="other__foto foto3 galary__slide">
+								<a data-fancybox="gallery" href="./img/galary/white-3.jpg">
+									<img src="./img/galary/white-3.jpg" data-white="./img/galary/white-3.jpg"
+										data-black="./img/galary/black-3.jpg" alt="" class="other__foto-img">
+								</a>
+							</div>
+							<div class="other__foto foto4 galary__slide">
+								<a data-fancybox="gallery" href="./img/galary/white-4.jpg">
+									<img src="./img/galary/white-4.jpg" data-white="./img/galary/white-4.jpg"
+										data-black="./img/galary/black-4.jpg" alt="" class="other__foto-img">
+								</a>
+							</div>
+							<div class="other__foto foto5 galary__slide">
+								<a data-fancybox="gallery" href="./img/galary/white-5.jpg">
+									<img src="./img/galary/white-5.jpg" data-white="./img/galary/white-5.jpg"
+										data-black="./img/galary/black-5.jpg" alt="" class="other__foto-img">
+								</a>
+							</div>
 						</div>
-						<div class="other__foto">
-							<a data-fancybox="gallery" href="./img/galary/white-2.jpg">
-								<img src="./img/galary/white-2.jpg" data-white="./img/galary/white-2.jpg"
-									data-black="./img/galary/black-2.jpg" alt="" class="other__foto-img">
-							</a>
-						</div>
-						<div class="other__foto">
-							<a data-fancybox="gallery" href="./img/galary/white-3.jpg">
-								<img src="./img/galary/white-3.jpg" data-white="./img/galary/white-3.jpg"
-									data-black="./img/galary/black-3.jpg" alt="" class="other__foto-img">
-							</a>
-						</div>
-						<div class="other__foto">
-							<a data-fancybox="gallery" href="./img/galary/white-4.jpg">
-								<img src="./img/galary/white-4.jpg" data-white="./img/galary/white-4.jpg"
-									data-black="./img/galary/black-4.jpg" alt="" class="other__foto-img">
-							</a>
-						</div>
-						<div class="other__foto">
-							<a data-fancybox="gallery" href="./img/galary/white-5.jpg">
-								<img src="./img/galary/white-5.jpg" data-white="./img/galary/white-5.jpg"
-									data-black="./img/galary/black-5.jpg" alt="" class="other__foto-img">
-							</a>
+						<div class="move__mark">
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
 						</div>
 					</div>
+				
 					<div class="galary__btns-group">
 						<button class="header__btn header__btn-white active">
 							<img src="./img/vertical-boot1.png" alt="" class="header__btn-img">
@@ -278,7 +288,7 @@
 						<img src="./img/logo.png" alt="" class="card__logo">
 					</div>
 					<div class="card__container">
-						<h3 class="card__title">Puma Roma Basic</h3>
+						<h3 class="card__title">Puma Mercedes AMG Petronas</h3>
 						<div class="card__left">
 							<img data-black="./img/card2-black.png" src="./img/card2-black.png" alt=""
 								class="card__left-img">
@@ -394,7 +404,7 @@
 						<img src="./img/logo.png" alt="" class="card__logo">
 					</div>
 					<div class="card__container">
-						<h3 class="card__title">Puma Roma Basic</h3>
+						<h3 class="card__title">Puma Tarrenz Winter</h3>
 						<div class="card__left">
 							<img data-white="./img/card3-yellow.png" data-black="./img/card3-black.png"
 								src="./img/card3-yellow.png" alt="" class="card__left-img">
@@ -647,7 +657,7 @@
 								</div>
 							</div>
 							<div class="review__foto">
-								<img src="./img/review1.jpg" alt="" class="review__img">
+								<img src="./img/review/3.jpg" alt="" class="review__img">
 							</div>
 						</div>
 						<div class="review">
@@ -674,7 +684,7 @@
 								</div>
 							</div>
 							<div class="review__foto">
-								<img src="./img/review1.jpg" alt="" class="review__img">
+								<img src="./img/review/5.jpg" alt="" class="review__img">
 							</div>
 						</div>
 						<div class="review">
@@ -701,7 +711,7 @@
 								</div>
 							</div>
 							<div class="review__foto">
-								<img src="./img/review1.jpg" alt="" class="review__img">
+								<img src="./img/review/6 (3).jpg" alt="" class="review__img">
 							</div>
 						</div>
 						<div class="review">
@@ -728,7 +738,7 @@
 								</div>
 							</div>
 							<div class="review__foto">
-								<img src="./img/review1.jpg" alt="" class="review__img">
+								<img src="./img/review/2.jpg" alt="" class="review__img">
 							</div>
 						</div>
 						<div class="review">
@@ -755,7 +765,7 @@
 								</div>
 							</div>
 							<div class="review__foto">
-								<img src="./img/review1.jpg" alt="" class="review__img">
+								<img src="./img/review/4 (3).jpg" alt="" class="review__img">
 							</div>
 						</div>
 					</div>
@@ -815,11 +825,11 @@
 		</div>
 	</div>
 	<script src="./libs/jquery.min.js"></script>
+	<script src="./libs/jquery.touchSwipe.min.js"></script>
 	<script src="./libs/aos.js"></script>
 	<script src="./libs/slick.min.js"></script>
 	<script src="./libs/jquery.fancybox.min.js"></script>
 	<script src="./libs/carousel.js"></script>
-	<!-- <script src="./libs/jquery.rateyo.min.js"></script -->
 	<script src="./libs/jquery.raty.js"></script>
 	<script src="./js/lib.js"></script>
 	<script src="./js/main.js"></script>
