--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="./libs/aos.css" />
 	<link rel="stylesheet" href="./libs/jquery.raty.css">
 	<link rel="stylesheet" href="./css/style.css" />
-	<title>Page Title</title>
+	<title>Puma Roma</title>
 </head>
 
 <body>
@@ -630,8 +630,8 @@
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
-											<li><img src="./img/star-50.png" alt=""></li>
-											<li><img src="./img/star-transparent.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
 										</ul>
 									</div>
 								</div>
@@ -657,7 +657,7 @@
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
-											<li><img src="./img/star-50.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-transparent.png" alt=""></li>
 										</ul>
 									</div>
@@ -684,8 +684,8 @@
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-50.png" alt=""></li>
-											<li><img src="./img/star-transparent.png" alt=""></li>
 										</ul>
 									</div>
 								</div>
@@ -738,7 +738,7 @@
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
-											<li><img src="./img/star-50.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-transparent.png" alt=""></li>
 										</ul>
 									</div>
@@ -765,8 +765,8 @@
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
 											<li><img src="./img/star-bg.png" alt=""></li>
-											<li><img src="./img/star-50.png" alt=""></li>
-											<li><img src="./img/star-transparent.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
+											<li><img src="./img/star-bg.png" alt=""></li>
 										</ul>
 									</div>
 								</div>
@@ -854,7 +854,6 @@
 	<script src="./libs/jquery.fancybox.min.js"></script>
 	<script src="./libs/carousel.js"></script>
 	<script src="./libs/jquery.raty.js"></script>
-	<script src="./js/lib.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 
