--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,15 @@
 					</a>
 				</div>
 				<div class="galary">
-					<div class="galary__background"></div>
+					<div class="galary__background">
+						<div class="move__mark">
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+							<a class="move" href="#"></a>
+						</div>
+					</div>
 					<img src="./img/galary-man.png" alt="" class="galary__man-img">
 					<div class="galary__block">
 						<div class="galary__wrapper">
@@ -136,13 +144,6 @@
 										data-black="./img/galary/black-5.jpg" alt="" class="other__foto-img">
 								</a>
 							</div>
-						</div>
-						<div class="move__mark">
-							<a class="move" href="#"></a>
-							<a class="move" href="#"></a>
-							<a class="move" href="#"></a>
-							<a class="move" href="#"></a>
-							<a class="move" href="#"></a>
 						</div>
 					</div>
 				
@@ -280,6 +281,9 @@
 							<button type="submit" class="order__link">
 								Заказать
 							</button>
+							<div class="time">
+								Акция продлится до <span>02.03.2021</span>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -396,6 +400,9 @@
 							<button type="submit" class="order__link">
 								Заказать
 							</button>
+							<div class="time">
+								Акция продлится до <span>02.03.2021</span>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -522,6 +529,9 @@
 							<button type="submit" class="order__link">
 								Заказать
 							</button>
+							<div class="time">
+								Акция продлится до <span>02.03.2021</span>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -537,7 +547,7 @@
 								<b>Цвет:</b> нейтральный;
 							</p>
 							<div class="price">
-								<div class="old__price"><b>Цена:</b><span> 4250 грн</span></div>
+								<div class="old__price"><b class="bold">Цена:</b><span> 4250 грн</span></div>
 								<div class="new__price">599 грн</div>
 							</div>
 						</div>
